Minimized image by multistage build
Issue-ID: NONRTRIC-845
Signed-off-by: BjornMagnussonXA <bjorn.magnusson@est.tech>
Change-Id: I7341b4ae826bab7904b001b70be0c6cc0cc0a90c